--- a/index.html
+++ b/index.html
@@ -5,34 +5,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <title>Hermandad - Arthas Did Nothing Wrong</title>
   </head>
   <body>
-    <h1>
-      Página oficial de la Hermandad <br />
-      Arthas Did Nothing Wrong
-    </h1>
+    <main class="main">
+      <div class="intro">
+        <h1>
+          Hermandad Arthas Did Nothing Wrong <br />
+          Página Oficial
+        </h1>
+      </div>
+      <div class="mensaje">
+        <img src="./assets/Peasant_GIF.gif" alt="Warcraft 3 Peasant" />
+        <p>Construyendo</p>
+      </div>
+      <div class="links">
+        <a href="https://discord.gg/C6En7rZ">
+          <img src="./assets/discord.svg" alt="Discord Logo" />
+          <span>Unirse</span>
+        </a>
+      </div>
+    </main>
   </body>
   <style>
+    /* GENERALES */
     * {
       margin: 0;
       padding: 0;
+      text-decoration: none;
+      /* color: #B8C1D9; */
+      color: #fdfdfb;
     }
     body {
       font-family: "Jost", monospace;
-      border: 1px solid red;
-      display: grid;
-      width: 100%;
+      width: 100vw;
       height: 100vh;
       background-image: url("./assets/wotlklogo.png");
+      background-color: #000;
+      background-size: 600px;
       background-repeat: no-repeat;
       background-position-x: center;
       background-position-y: top;
+    }
+    /* GENERALES */
+
+    /* MAIN */
+    .main {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      top: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+    }
+    /* MAIN */
+
+    /* INTRO */
+    h1 {
+      text-align: center;
+      font-size: 25px;
+    }
+    /* INTRO */
+
+    /* MENSAJE */
+    .mensaje {
+      display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
+      /* position: relative; */
     }
+    .mensaje img {
+      width: 120px;
+    }
+    .mensaje p {
+      /* position: absolute; */
+      bottom: 0;
+      font-size: 20px;
+      font-weight: 300;
+    }
+    /* MENSAJE */
+
+    /* LINK */
+    .links {
+      width: 300px;
+      height: 150px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .links a {
+      display: inherit;
+      align-items: center;
+    }
+    .links a img {
+      display: inherit;
+      width: 120px;
+    }
+    .links a span {
+      color: #7289da;
+      text-transform: uppercase;
+      margin-left: 5px;
+      font-weight: bold;
+      font-size: 50px;
+    }
+    /* LINK */
+
+    /* MEDIA */
+    @media (max-width: 430px) {
+      body {
+        background-size: 99vw;
+      }
+      .main {
+        top: 200px;
+      }
+    }
+    /* MEDIA */
   </style>
 </html>
